# kernel_oneplus_sm8650-modules

./: Android.bp  Android.mk  BUILD.bazel  EnableBazel.mk  Kbuild  Kconfig  Makefile  a6xx_reg.h  adreno-gpulist.h  adreno.c  adreno.h  adreno_a3xx.c  adreno_a6xx.c  adreno_a6xx_gmu.c  adreno_a6xx_gmu.h  adreno_a6xx_gmu_snapshot.c  adreno_a6xx_hwsched.c  adreno_a6xx_hwsched_hfi.c  adreno_a6xx_preempt.c  adreno_a6xx_rgmu.c  adreno_a6xx_ringbuffer.c  adreno_a6xx_snapshot.c  adreno_debugfs.c  adreno_dispatch.c  adreno_drawctxt.c  adreno_drawctxt.h  adreno_gen7.c  adreno_gen7.h  adreno_gen7_0_0_snapshot.h  adreno_gen7_11_0_snapshot.h  adreno_gen7_2_0_snapshot.h  adreno_gen7_9_0_snapshot.h  adreno_gen7_gmu.c  adreno_gen7_gmu.h  adreno_gen7_gmu_snapshot.c  adreno_gen7_hfi.c  adreno_gen7_hfi.h  adreno_gen7_hwsched.c  adreno_gen7_hwsched.h  adreno_gen7_hwsched_hfi.c  (+97 more)
asoc/: Kbuild  auto_spf_dummy.c  gvm_auto_spf_dummy.c  holi.c  msm_common.c  msm_dailink.h  pineapple-port-config.h  pineapple.c
btfmcodec/: btfm_codec.c  btfm_codec_btadv_interface.c  btfm_codec_interface.c
cnss2/: main.c  pci.c
config/: anorak_video.h  gki_bengaltouchconf.h  gki_blairtouch.conf  gki_blairtouchconf.h  gki_monacotouch.conf  gki_monacotouchconf.h  gki_pineapple.conf  gki_pitti.conf  kalama_video.h  pineapple_consolidate_gpuconf  pineapple_consolidate_gpuconf.h  pineapple_gki_gpuconf  pineapple_video.conf  pineapple_video.h  pineappleautoconf.h  pineappledspconf.h  pitti_consolidate_gpuconf  pittiauto.conf  pittiautoconf.h  volcano.mk  waipio_video.h
core/: Android.mk
crypto-qti/: compat_qcedev.c  qce.h  qce50.c  qcedev.c  qcedevi.h  qcrypto.c
drivers/: spcom.c  spss_utils.c
dsp/: Kbuild  adsp-loader.c  adsprpc.c  adsprpc_rpmsg.c  adsprpc_shared.h  adsprpc_socket.c  audio_notifier.c  audio_prm.c  cdsp-loader.c  fastrpc_trace.h  spf-core.c
focaltech_touch/: focaltech_core.c
glink_interface_ts/: glink_interface.h
goodix_berlin_driver/: goodix_brl_hw.c
hdcp/: hdcp2p2.h  hdcp_main.c  hdcp_main.h  hdcp_qseecom.c  hdcp_smcinvoke.c
hw_fence/: Kbuild
icnss2/: main.c
include/: btpower.h
ipc/: Kbuild  gpr-lite.c
linux/: IClientEnv.h  qcedev.h  smcinvoke.h
msm/: Kbuild  Makefile
msm_video/: Kbuild
nfc/: common.c  common.h  common_nxp.c  common_qcom.c  ese_cold_reset.c  ese_cold_reset.h  i2c_drv.c  st21nfc.c  st21nfc.h
offload/: Android.mk
perf/: BUILD.bazel
pt/: pt_platform.c
pwr/: btpower.c
qseecom/: qseecom.c
raydium/: raydium_driver.c  raydium_driver.h  raydium_sysfs.c
sch/: BUILD.bazel
shs/: BUILD.bazel  rmnet_shs_main.c  rmnet_shs_wq.c
slimbus/: btfm_slim.c  btfm_slim_hw_interface.c  btfm_slim_hw_interface.h
smcinvoke/: smcinvoke.c  smcinvoke_kernel.c  trace_smcinvoke.h
smmu-proxy/: qti-smmu-proxy-common.c  qti-smmu-proxy-pvm.c  qti-smmu-proxy-tvm.c  qti-smmu-proxy.c
(+475 files in other folders)
