package(
    default_visibility = [
        "//visibility:public",
    ],
)

load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")

ddk_headers(
    name = "smcinvoke_kernel_headers",
    hdrs = glob([
        "include/linux/smcinvoke*.h",
        "include/linux/IClientE*.h",
        "include/linux/ITrustedCameraDriver.h",
        "include/linux/CTrustedCameraDriver.h",
        "linux/misc/qseecom_kernel.h",
        "linux/misc/qseecom_priv.h"
    ]),
    includes = ["include/linux", "linux", "include"]
)

ddk_headers(
    name = "securemsm_kernel_headers",
    hdrs = [
        "linux/misc/qseecom_kernel.h",
        "linux/misc/qseecom_priv.h"
    ],
    includes = ["linux"]
)
ddk_headers(
    name = "hdcp_qseecom_dlkm",
    hdrs = glob([
        "linux/*.h",
        "linux/misc/qseecom_kernel.h",
        "hdcp_qseecom/*.h",
        "config/*.h"
    ]),
    includes = [".","linux","config"]
)

ddk_headers(
    name = "qcedev_local_headers",
    hdrs = glob([
        "linux/*.h",
        "crypto-qti/*.h"
    ]),
    includes = [".", "crypto-qti"]
)

load("pineapple.bzl", "define_pineapple")

define_pineapple()
